[tool.poetry]
name = "space-layout-gym"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
stable-baselines3 = "^2.3.2"
tensorboard = "^2.17.0"
torchvision = "^0.18.1"
scipy = "^1.14.0"
scikit-image = "^0.24.0"
webcolors = "^24.6.0"
torch-intermediate-layer-getter = "^0.1.post1"
shapely = "^2.0.5"
numpy = "1.26.4"
bezier = "2023.7.28"
gym-floorplan = {path = "gym-floorplan"}
lion-pytorch = "^0.2.2"
plotly = "^5.22.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
